--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body {
     color: white;
     font-weight: bolder;
     font-size: 40px;
-    font-family: cursive;
+    font-family:monospace;
 }
 
 .midsection {
@@ -81,7 +81,7 @@ body {
     color: white;
     font-weight: bolder;
     font-size: 20px;
-    font-family: cursive;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .startbtn:hover{
